tests/errors/tc_expr_deref_nonptr.lx
@module "main"

pub const main -> fn () int {
    let s: str = "hello";
    *s;
    return 0;
}
